quil-rs/src/instruction/snapshots/quil_rs__instruction__circuit__test_circuit_definition__display@CircuitDefinition No Params.snap
---
source: quil-rs/src/instruction/circuit.rs
expression: circuit_def.to_quil_or_debug()
---
DEFCIRCUIT BELL a b:
    H a
    CNOT a b
