quil-rs/src/instruction/snapshots/quil_rs__instruction__circuit__test_circuit_definition__display@CircuitDefinition With Params.snap
---
source: quil-rs/src/instruction/circuit.rs
expression: circuit_def.to_quil_or_debug()
---
DEFCIRCUIT BELL(%a, %b) a b:
    RZ(%a) a
    RZ(%b) a
    RX(%a) a
    RZ(%a) a
    CNOT a b
