quil-rs/src/instruction/snapshots/quil_rs__instruction__circuit__test_circuit_definition__display@CircuitDefinition With Single Param.snap
---
source: quil-rs/src/instruction/circuit.rs
expression: circuit_def.to_quil_or_debug()
---
DEFCIRCUIT BELL(%a) a b:
    RZ(%a) a
    RX(%a) a
    RZ(%a) a
    CNOT a b
